--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,6 @@
 	body { background: #fff; color: #000; font-size: 100%; min-height: 100%; text-align: left; position: relative; }		
 	
 body {
-	margin-top: 2%;
 	font-family: "Georgia Pro", "Helvetica neue", Helvetica;
 	font-size: 23px;
 	font-weight: 350;
@@ -51,7 +50,7 @@ img {
 	
 article {
 	width: 720px;
-	padding: 30px;
+	padding: 30px 30px 0px 30px;
 	line-height: 32px;
 	margin: 0 auto;
 	}
