--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,7 @@ body {
 	font-family: "Georgia Pro", "Helvetica neue", Helvetica;
 	font-size: 23px;
 	font-weight: 350;
+	margin-top: 2%;
 	}
 
 img {
