--- a/css/style.css
+++ b/css/style.css
@@ -107,13 +107,13 @@ a:hover, a:active, a:focus  {
 		}
 	
 h1 {
-	font-family: "Franklin ITC Pro Light", "Essays 1743";
+	font-family: "Franklin ITC Pro Bold", "Essays 1743";
 	font-size: 180%;
 	padding-bottom:30px;
 	}
 
 h2 {
-	font-family: "Franklin ITC Pro Light", "Essays 1743";
+	font-family: "Franklin ITC Pro Bold", "Essays 1743";
 	font-size: 120%;
 	padding-top:10px;
 	padding-bottom:20px;
