--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@
 body {
 	font-family: "Georgia Pro", "Helvetica neue", Helvetica;
 	font-size: 23px;
-	line-height: 1.5em;
+	line-height: 30px;
 	margin-top: 4%;
 	margin-bottom: 4%;
 	}
