--- a/css/style.css
+++ b/css/style.css
@@ -46,9 +46,8 @@ body {
 
 img {
 	color: #fff;
-	position: relative; 
-	left: 27%;
-	max-height:350px;
+	width:720px;
+	border-radius: 4px;
 	}
 	
 article {
