--- a/css/style.css
+++ b/css/style.css
@@ -72,14 +72,14 @@ a:hover, a:active, a:focus  {
 h1 {
 	font-family: "Franklin ITC Pro Bold", "Essays 1743";
 	font-size: 220%;
-	padding-bottom:30px;
+	padding-bottom:1.4em;
 	}
 
 h2 {
 	font-family: "Franklin ITC Pro Bold", "Essays 1743";
 	font-size: 170%;
-	padding-top:10px;
-	padding-bottom:20px;
+	padding-top:1em;
+	padding-bottom:1.2em;
 	}
 	
 p {
