--- a/css/style.css
+++ b/css/style.css
@@ -1,36 +1,3 @@
-@font-face {
-		font-family: "Georgia Pro";
-		src: url("http://wac.6a25.edgecastcdn.net/006A25/webtype/ff/1/3764b2f7-4b10-4419-998b-d39c48433307") format("truetype");
-		}
-@font-face {
-		font-family: "Georgia Pro";
-		src: url("http://wac.6a25.edgecastcdn.net/006A25/webtype/ff/2/896c874c-a103-4571-834c-37d16381ca79");
-		}
-@font-face {
-		font-family: "Georgia Pro";
-		src: url("http://wac.6a25.edgecastcdn.net/006A25/webtype/ff/3/708d476d-deaf-4078-b266-281f94ced1bd") format("woff");
-		}
-@font-face {
-		 font-family: "Essays 1743";
-		 src: url('/css/essays1743-webfont.ttf') format('truetype'); /* TTF file for CSS3 browsers */
-		}
-@font-face {
-		 font-family: "Essays 1743";
-		 src: url('/css/essays1743-webfont.eot'); /* EOT file for IE */
-		}
-@font-face {
-		 font-family: "Franklin ITC Pro Bold";
-		 src: url("http://wac.6a25.edgecastcdn.net/006A25/webtype/ff/1/a2664c9a-d783-4071-86ec-478136d31525") format("truetype");
-		}
-@font-face {
-		 font-family: "Franklin ITC Pro Bold";
-		 src: url("http://wac.6a25.edgecastcdn.net/006A25/webtype/ff/2/0b12aa52-bb8a-421b-a962-e81d85d29404");
-		}
-@font-face {
-		 font-family: "Franklin ITC Pro Bold";
-		 src: url("http://wac.6a25.edgecastcdn.net/006A25/webtype/ff/3/eaaadd6b-b1b9-43c8-9cbd-35a67dc05d46") format("woff");
-		}
-
 
 
 /* Reset */
@@ -38,8 +5,8 @@
 	body { background: #fff; color: #000; font-size: 100%; min-height: 100%; text-align: left; position: relative; }		
 	
 body {
-	font-family: "Helvetica neue", Helvetica, arial, "Georgia Pro";
-	font-size: 22px;
+	font-family: "Helvetica neue", Helvetica, arial;
+	font-size: 1.3em;
 	margin-top: 4%;
 	margin-bottom: 4%;
 	}
@@ -70,17 +37,17 @@ a:hover, a:active, a:focus  {
 		}
 	
 h1 {
-	font-family: "Helvetica neue", Helvetica, arial, "Franklin ITC Pro Bold", "Essays 1743";
+	font-family: "Helvetica neue", Helvetica, arial;
 	font-size: 48px;
-font-weight: bold;
+	font-weight: bold;
 	padding-bottom:0.6em;
 	}
 
 h2 {
-	font-family: "Helvetica neue", Helvetica, arial, "Franklin ITC Pro Bold", "Essays 1743";
+	font-family: "Helvetica neue", Helvetica, arial;
 	font-size: 36px;
 	padding-top:0.6em;
-font-weight: bold;
+	font-weight: bold;
 	padding-bottom:0.8em;
 	}
 	
