--- a/css/style.css
+++ b/css/style.css
@@ -1,58 +1,72 @@
 
-
 /* Reset */
 	* { font-family: inherit; font-size: 100%; font-style: inherit; font-weight: inherit; margin: 0; outline: 0; padding: 0; vertical-align: baseline; }
 	body { background: #fff; color: #000; font-size: 100%; min-height: 100%; text-align: left; position: relative; }		
-	
+
+
 body {
 	font-family: "Helvetica neue", Helvetica, arial;
-	font-size: 1.3em;
-	margin-top: 4%;
-	margin-bottom: 4%;
+	margin: 0;
+	margin: 0;
 	}
 
-img {
-	color: #fff;
-	width:720px;
-	border-radius: 4px;
-       margin-top: 1em;
+
+a:link, a:visited {
+	text-decoration: underline;
+	color: #ff4411;
 	}
-	
+
+
+a:hover, a:active, a:focus  {
+	background-color: #ff4411;
+	text-decoration: none;
+	color: #fff;
+	}
+
+
 article {
 	width: 720px;
 	padding: 0px 30px 0px 30px;
-	line-height: 1.6em;
 	margin: 0 auto;
 	}
 
-a:link, a:visited {
-		text-decoration: underline;
-		color: #ff4411;
-		}
 
-a:hover, a:active, a:focus  {
-		background-color: #ff4411;
-		text-decoration: none;
-		color: #fff;
-		}
-	
-h1 {
-	font-family: "Helvetica neue", Helvetica, arial;
-	font-size: 48px;
-	font-weight: bold;
-	padding-bottom:0.6em;
+h1, h2 {
+    font-weight: bold;
 	}
+
+
+h1 {
+	margin-top: 0;
+	margin-bottom: 0.6em;
+	font-size: 48px;
+	}
+
 
 h2 {
-	font-family: "Helvetica neue", Helvetica, arial;
+	margin-top: 1em;
+	margin-bottom: 0.6em;
 	font-size: 36px;
-	padding-top:0.6em;
-	font-weight: bold;
-	padding-bottom:0.8em;
 	}
+
 	
 p {
 	margin-top: 0em;
-       margin-bottom: 0.8em;
+	margin-bottom: 1em;
+	font-size: 1.3em;
+	line-height: 1.6em;
 	}
 
+
+img {
+	margin-top: 1em;
+	width:720px;
+	border-radius: 4px;
+	color: #fff;
+	}
+
+
+li {
+	font-size: 20px;
+	line-height: 1.6em;
+}
