--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,8 +4,7 @@
         <meta charset="utf-8">
         <title>{{ page.title }}</title>
 		<meta name="viewport" content="width=780">
-		<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/2.7.0/build/reset-fonts-grids/reset-fonts-grids.css">
-        <link rel="stylesheet" href="{{ site.url }}/css/resetcss" >
+              <link rel="stylesheet" href="{{ site.url }}/css/reset.css" >
 		<link rel="stylesheet" href="{{ site.url }}/css/style.css" >
 		<script src="http://www.google-analytics.com/urchin.js" type="text/javascript"></script>
     </head>
