--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,119 @@
+@font-face {
+    font-family: "Myriad Condensed";
+    src: url(http://static.dorigo.co/themes/dorigo4/assets/fonts/2eea462e-4b20-431f-a049-5a2fd1c74c94.eot?#iefix);
+    src: url(http://static.dorigo.co/themes/dorigo4/assets/fonts/2eea462e-4b20-431f-a049-5a2fd1c74c94.eot?#iefix) format("eot"), url(http://static.dorigo.co/themes/dorigo4/assets/fonts/3266819e-433c-4724-9440-cb8bcbdbf2d6.woff) format("woff"), url(assets/fonts/e7873229-b425-4c58-97a5-212630f5226c.ttf) format("truetype"), url(assets/fonts/ea9132a5-e47c-4307-9aa3-0029e329ed85.svg#ea9132a5-e47c-4307-9aa3-0029e329ed85) format("svg");
+    font-weight: 300;
+    font-style: italic
+}
+
+@font-face {
+    font-family: "Myriad Condensed";
+    src: url(http://static.dorigo.co/themes/dorigo4/assets/fonts/e5d6ed0d-c1ec-4469-90de-5784ad5c8baa.eot?#iefix);
+    src: url(http://static.dorigo.co/themes/dorigo4/assets/fonts/e5d6ed0d-c1ec-4469-90de-5784ad5c8baa.eot?#iefix) format("eot"), url(http://static.dorigo.co/themes/dorigo4/assets/fonts/7703a5c8-61a4-4d32-9768-83ec303e9f2b.woff) format("woff"), url(assets/fonts/d80f1f4a-8843-425c-8492-ec8015c07eeb.ttf) format("truetype"), url(assets/fonts/28971b53-c747-4c80-9aa5-107f3d702047.svg#28971b53-c747-4c80-9aa5-107f3d702047) format("svg");
+    font-weight: 300;
+    font-style: normal
+}
+
+@font-face {
+    font-family: "Myriad Condensed";
+    src: url(http://static.dorigo.co/themes/dorigo4/assets/fonts/36553e3c-6b60-408c-8c9f-25951f0336e0.eot?#iefix);
+    src: url(http://static.dorigo.co/themes/dorigo4/assets/fonts/36553e3c-6b60-408c-8c9f-25951f0336e0.eot?#iefix) format("eot"), url(http://static.dorigo.co/themes/dorigo4/assets/fonts/69bf8ecd-6a75-4d01-9f52-8d2115329d50.woff) format("woff"), url(assets/fonts/eaf4144b-0678-4de1-927e-af36acce48f8.ttf) format("truetype"), url(assets/fonts/728d1ae4-9f8a-4af7-8a09-5778dfe8cb59.svg#728d1ae4-9f8a-4af7-8a09-5778dfe8cb59) format("svg");
+    font-weight: 400;
+    font-style: italic
+}
+
+@font-face {
+    font-family: "Myriad Condensed";
+    src: url(http://static.dorigo.co/themes/dorigo4/assets/fonts/ac5ab5e5-33fd-4088-b059-0bb569afd809.eot?#iefix);
+    src: url(http://static.dorigo.co/themes/dorigo4/assets/fonts/ac5ab5e5-33fd-4088-b059-0bb569afd809.eot?#iefix) format("eot"), url(http://static.dorigo.co/themes/dorigo4/assets/fonts/46bfe93f-37b4-4f09-b72d-dca0b609e20f.woff) format("woff"), url(assets/fonts/a21d9dfa-f77c-4009-aa22-09f3d9f99752.ttf) format("truetype"), url(assets/fonts/e7f8e64a-127f-47df-80d9-12ca86c5b053.svg#e7f8e64a-127f-47df-80d9-12ca86c5b053) format("svg");
+    font-weight: 400;
+    font-style: normal
+}
+
+@font-face {
+    font-family: "Myriad Condensed";
+    src: url(http://static.dorigo.co/themes/dorigo4/assets/fonts/efb4c5b5-2f2f-4243-a4c1-2ae10ce956db.eot?#iefix);
+    src: url(http://static.dorigo.co/themes/dorigo4/assets/fonts/efb4c5b5-2f2f-4243-a4c1-2ae10ce956db.eot?#iefix) format("eot"), url(http://static.dorigo.co/themes/dorigo4/assets/fonts/8cea75c4-1f67-4ea6-ab74-9391609e349b.woff) format("woff"), url(assets/fonts/c1cca0c6-2b8b-4574-8367-8c139b684f77.ttf) format("truetype"), url(assets/fonts/1b3e55d8-8da1-4f1e-ae9d-de5154bd418b.svg#1b3e55d8-8da1-4f1e-ae9d-de5154bd418b) format("svg");
+    font-weight: 600;
+    font-style: normal
+}
+
+@font-face {
+    font-family: "Myriad Condensed";
+    src: url(http://static.dorigo.co/themes/dorigo4/assets/fonts/67a8e2c6-cce0-4739-a9d0-06a43dd631b6.eot?#iefix);
+    src: url(http://static.dorigo.co/themes/dorigo4/assets/fonts/67a8e2c6-cce0-4739-a9d0-06a43dd631b6.eot?#iefix) format("eot"), url(http://static.dorigo.co/themes/dorigo4/assets/fonts/bb3fbf60-b09a-41b8-9d00-1ec15cfc22be.woff) format("woff"), url(assets/fonts/b1ece573-9c2b-420b-9f79-d207853a2a22.ttf) format("truetype"), url(assets/fonts/067c194d-6435-4671-b468-f07dfe09f160.svg#067c194d-6435-4671-b468-f07dfe09f160) format("svg");
+    font-weight: 700;
+    font-style: italic
+}
+
+@font-face {
+    font-family: "Myriad W01 Bd Sm Cnd";
+    src: url(http://static.dorigo.co/themes/dorigo4/assets/fonts/05288a48-9aa4-47ee-9af8-97126df7e999.eot?#iefix);
+    src: url(http://static.dorigo.co/themes/dorigo4/assets/fonts/05288a48-9aa4-47ee-9af8-97126df7e999.eot?#iefix) format("eot"), url(http://static.dorigo.co/themes/dorigo4/assets/fonts/c858c292-597c-4ffe-a108-4e6568fbae4e.woff) format("woff"), url(assets/fonts/1522b786-6d59-43f7-9d16-34279ee0acf8.ttf) format("truetype"), url(assets/fonts/1455167d-f3ec-4022-ae9f-b9ce5746d2a0.svg#1455167d-f3ec-4022-ae9f-b9ce5746d2a0) format("svg");
+    font-weight: 700;
+    font-style: normal
+}
+
+@font-face {
+    font-family: "Myriad";
+    src: url(http://static.dorigo.co/themes/dorigo4/assets/fonts/7f8bf145-43b4-4e18-8ab6-38552ac83b70.eot?#iefix);
+    src: url(http://static.dorigo.co/themes/dorigo4/assets/fonts/7f8bf145-43b4-4e18-8ab6-38552ac83b70.eot?#iefix) format("eot"), url(http://static.dorigo.co/themes/dorigo4/assets/fonts/3efa8eef-d81a-4a5b-ba15-94c5afa463cf.woff) format("woff"), url(assets/fonts/0ac3a8d1-ea58-4bc8-b995-cd7fce51290e.ttf) format("truetype"), url(assets/fonts/f360572f-8d74-4e11-b63c-91a55e17c82d.svg#f360572f-8d74-4e11-b63c-91a55e17c82d) format("svg");
+    font-weight: 300;
+    font-style: italic
+}
+
+@font-face {
+    font-family: "Myriad";
+    src: url(http://static.dorigo.co/themes/dorigo4/assets/fonts/b3e9f984-f8ca-4650-90c3-d6f0aca0a27d.eot?#iefix);
+    src: url(http://static.dorigo.co/themes/dorigo4/assets/fonts/b3e9f984-f8ca-4650-90c3-d6f0aca0a27d.eot?#iefix) format("eot"), url(http://static.dorigo.co/themes/dorigo4/assets/fonts/b984f4e8-e37d-4502-bead-ffd991e64d1f.woff) format("woff"), url(assets/fonts/82d18baa-8811-4aa8-9338-9bafa08350d0.ttf) format("truetype"), url(assets/fonts/20e14bb9-6aec-47a9-8ef8-5613bf1d6eae.svg#20e14bb9-6aec-47a9-8ef8-5613bf1d6eae) format("svg");
+    font-weight: 300;
+    font-style: normal
+}
+
+@font-face {
+    font-family: "Myriad";
+    src: url(http://static.dorigo.co/themes/dorigo4/assets/fonts/b7dea71a-f8e7-42e0-b03b-ae1b0b6eb0cd.eot?#iefix);
+    src: url(http://static.dorigo.co/themes/dorigo4/assets/fonts/b7dea71a-f8e7-42e0-b03b-ae1b0b6eb0cd.eot?#iefix) format("eot"), url(http://static.dorigo.co/themes/dorigo4/assets/fonts/7becdf28-cd45-4f8a-bcab-d8c861a8ebc5.woff) format("woff"), url(assets/fonts/b90a1a2e-a700-4528-aa00-535c93ecf8a9.ttf) format("truetype"), url(assets/fonts/85c745b1-d826-4e09-988f-82cd152fb0db.svg#85c745b1-d826-4e09-988f-82cd152fb0db) format("svg");
+    font-weight: 400;
+    font-style: italic
+}
+
+@font-face {
+    font-family: "Myriad";
+    src: url(http://static.dorigo.co/themes/dorigo4/assets/fonts/76fda6fb-8617-4e88-b290-945c47127ceb.eot?#iefix);
+    src: url(http://static.dorigo.co/themes/dorigo4/assets/fonts/76fda6fb-8617-4e88-b290-945c47127ceb.eot?#iefix) format("eot"), url(http://static.dorigo.co/themes/dorigo4/assets/fonts/01932eb5-2a4e-4bd4-b8a8-8e04f69b2d66.woff) format("woff"), url(assets/fonts/b1811139-1d49-42a2-8353-e29ca087433c.ttf) format("truetype"), url(assets/fonts/77a8ed10-0737-4849-9972-26d6e7585df5.svg#77a8ed10-0737-4849-9972-26d6e7585df5) format("svg");
+    font-weight: 400;
+    font-style: normal
+}
+
+@font-face {
+    font-family: "Myriad";
+    src: url(http://static.dorigo.co/themes/dorigo4/assets/fonts/f71415c0-f68d-42cd-a948-05af81548ea5.eot?#iefix);
+    src: url(http://static.dorigo.co/themes/dorigo4/assets/fonts/f71415c0-f68d-42cd-a948-05af81548ea5.eot?#iefix) format("eot"), url(http://static.dorigo.co/themes/dorigo4/assets/fonts/c22866d7-ca67-4170-a113-cae280eea669.woff) format("woff"), url(assets/fonts/19ce9ea9-076e-4dcd-91a1-454f4830f120.ttf) format("truetype"), url(assets/fonts/18915124-98e4-4245-9e10-b921e09a6704.svg#18915124-98e4-4245-9e10-b921e09a6704) format("svg");
+    font-weight: 600;
+    font-style: normal
+}
+
+@font-face {
+    font-family: "Myriad";
+    src: url(http://static.dorigo.co/themes/dorigo4/assets/fonts/67452424-3136-49b1-827d-49c5dcde5779.eot?#iefix);
+    src: url(http://static.dorigo.co/themes/dorigo4/assets/fonts/67452424-3136-49b1-827d-49c5dcde5779.eot?#iefix) format("eot"), url(http://static.dorigo.co/themes/dorigo4/assets/fonts/088bed5d-3869-422a-8876-df9a6992b434.woff) format("woff"), url(assets/fonts/b0e5af12-5659-4451-b843-6fade25c4e53.ttf) format("truetype"), url(assets/fonts/e590a993-9202-42bc-a22f-25243e6b0d5a.svg#e590a993-9202-42bc-a22f-25243e6b0d5a) format("svg");
+    font-weight: 700;
+    font-style: italic
+}
+
+@font-face {
+    font-family: "Myriad";
+    src: url(http://static.dorigo.co/themes/dorigo4/assets/fonts/4f2af761-c017-4801-9aa5-5d30643373ce.eot?#iefix);
+    src: url(http://static.dorigo.co/themes/dorigo4/assets/fonts/4f2af761-c017-4801-9aa5-5d30643373ce.eot?#iefix) format("eot"), url(http://static.dorigo.co/themes/dorigo4/assets/fonts/acfb7490-30f6-4bf4-a1b8-70ff9172d209.woff) format("woff"), url(assets/fonts/5bf402e3-ba96-414e-bc7e-cb6689fe32c1.ttf) format("truetype"), url(assets/fonts/c5dceae7-427a-4765-b06b-ea2eecca3434.svg#c5dceae7-427a-4765-b06b-ea2eecca3434) format("svg");
+    font-weight: 700;
+    font-style: normal
+}
+
+
 
 body {
-	font-family: "Myriad Pro", Helvetica, arial;
+	font-family: "Myriad Condensed", "myriad-pro", Helvetica, arial;
 	margin: 0;
 	margin: 0;
 	}
