--- a/css/style.css
+++ b/css/style.css
@@ -113,7 +113,7 @@
 
 
 body {
-	font-family: "Myriad Condensed", "myriad-pro", Helvetica, arial;
+	font-family: "myriad-pro", Helvetica, arial;
 	margin: 0;
 	margin: 0;
 	}
