--- a/css/style.css
+++ b/css/style.css
@@ -66,3 +66,10 @@ li {
 	line-height: 1.6em;
 	}
 
+object, iframe {
+		width: 720px;
+		height: 405px;
+		margin-top: 1em;
+		border-radius: 4px;
+		color: #fff;
+		}
