--- a/css/style.css
+++ b/css/style.css
@@ -34,14 +34,14 @@ h1, h2 {
 h1 {
 	margin-top: 0;
 	margin-bottom: 0.6em;
-	font-size: 36px;
+	font-size: 1.5em;
 	}
 
 
 h2 {
 	margin-top: 1em;
 	margin-bottom: 0.6em;
-	font-size: 30px;
+	font-size: 1.4em;
 	}
 
 	
