--- a/css/style.css
+++ b/css/style.css
@@ -34,21 +34,21 @@ h1, h2 {
 h1 {
 	margin-top: 0;
 	margin-bottom: 0.6em;
-	font-size: 1.5em;
+	font-size: 36px;
 	}
 
 
 h2 {
 	margin-top: 1em;
 	margin-bottom: 0.6em;
-	font-size: 1.4em;
+	font-size: 24px;
 	}
 
 	
 p {
 	margin-top: 0em;
 	margin-bottom: 1em;
-	font-size: 1.2em;
+	font-size: 18px;
 	line-height: 1.6em;
 	}
 
