--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ a:hover, a:active, a:focus  {
 
 
 article {
-	width: 320px;
+	max-width: 720px;
 	padding: 30px;
 	margin: 0 auto;
 	}
@@ -32,7 +32,7 @@ h1, h2 {
 
 
 h1 {
-	margin-top: 0;
+	margin-top: 0em;
 	margin-bottom: 0em;
 	font-size: 36px;
 	}
