--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,5 @@
-
 body {
-	font-family: courier;
+	font-family: helvetica;
 	margin: 0;
 	padding: 0;
 	}
@@ -48,7 +47,7 @@ h2 {
 p {
 	margin-top: 0em;
 	margin-bottom: 1em;
-	font-size: 24px;
+	font-size: 18px;
 	line-height: 1.6em;
 	}
 
