--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,5 @@
 body {
-	font-family: helvetica;
-	font-size: 18px;
+	font-family: courier;
 	margin: 0;
 	padding: 0;
 	}
@@ -21,7 +20,7 @@ a:hover, a:active, a:focus  {
 
 article {
 	max-width: 720px;
-	padding: 5px;
+	padding: 30px;
 	margin: 0 auto;
 	}
 
@@ -34,6 +33,7 @@ h1, h2 {
 h1 {
 	margin-top: 0em;
 	margin-bottom: 0em;
+	font-size: 2em;
 	}
 
 
