--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,22 @@
+:root {
+ 	--color-text: black;
+  	--color-background: white;
+	}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --color-text: white;
+    --color-background: black;
+  }
+}
+
 body {
 	font-family: courier;
 	margin: 0;
 	padding: 0;
 	font-size: 18px;
-	}
-
-body.theme-light {
-	background-color:#fff;
-	color:#222
-	}
-
-body.theme-dark {
-	background-color:#1e1e1e;
-	color:#dadada
+	color: var(--color-text);
+  	background-color: var(--color-background);
 	}
 
 a:link, a:visited {
@@ -63,8 +67,6 @@ p {
 
 img {
 	margin-top: 1.5em;
-	
-
 	}
 
 
